# SpotifyInternshipNotifier

./: .env.template  .funcignore  README.md  check_for_internships.py  function_app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: main_spotifyinternshipnotifier.yml
